--- a/djangovoice/templates/djangovoice/list.html
+++ b/djangovoice/templates/djangovoice/list.html
@@ -1,6 +1,11 @@
 {% extends "djangovoice/feedback_base.html" %}
 {% load i18n %}
-{% load djangovoice_tags voting_tags gravatar comments %}
+{% load djangovoice_tags qhonuskan_votes gravatar comments %}
+{% block djangovoice_scripts %}
+    <link type="text/css" rel="stylesheet" href="{{STATIC_URL}}default_buttons.css">
+    <script type="application/javascript" src="{{STATIC_URL}}djangovoice/js/csrf_fix.js"></script>
+    {% voting_script %}
+{% endblock %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -8,20 +13,15 @@
   <h1>{{ title }}</h1>
 
   {% if feedback_list %}
-    {% votes_by_user user on feedback_list as vote_dict %}
-    {% scores_for_objects feedback_list as score_dict %}
 
     <table class="list">
       {% for feedback in feedback_list %}
-        {% dict_entry_for_item feedback from vote_dict as vote %}
-        {% dict_entry_for_item feedback from score_dict as score %}
         {% get_comment_count for feedback as comment_count %}
 
         <tr>
           <td class="votes">
-            <div>{{ score.score|default:0 }}</div>
+            {% vote_buttons_for feedback %}
           </td>
-
           <td class="status">
             <span class="feedback-type feedback-type-{{ feedback.type.slug }}">{{ feedback.type.title }}</span>
           </td>
