refactoring: feedback_base.html -> feedback.html

--- a/djangovoice/templates/djangovoice/detail.html
+++ b/djangovoice/templates/djangovoice/detail.html
@@ -1,4 +1,4 @@
-{% extends "djangovoice/feedback_base.html" %}
+{% extends "djangovoice/base.html" %}
 
 {% load url from future %}
 {% load gravatar qhonuskan_votes djangovoice_tags comments i18n %}
