--- a/djangovoice/templates/djangovoice/list.html
+++ b/djangovoice/templates/djangovoice/list.html
@@ -1,4 +1,4 @@
-{% extends "djangovoice/feedback_base.html" %}
+{% extends "djangovoice/base.html" %}
 
 {% load i18n %}
 {% load url from future %}
