--- a/djangovoice/templates/djangovoice/delete.html
+++ b/djangovoice/templates/djangovoice/delete.html
@@ -1,4 +1,4 @@
-{% extends "djangovoice/feedback_base.html" %}
+{% extends "djangovoice/base.html" %}
 {% load trans from i18n %}
 
 {% block title %}{% trans "Delete" %}{% endblock %}
