--- a/djangovoice/templates/djangovoice/submit.html
+++ b/djangovoice/templates/djangovoice/submit.html
@@ -1,4 +1,5 @@
-{% extends "djangovoice/feedback_base.html" %}
+{% extends "djangovoice/base.html" %}
+
 {% load trans from i18n %}
 {% load url from future %}
 
