--- a/djangovoice/templates/djangovoice/base.html
+++ b/djangovoice/templates/djangovoice/base.html
@@ -1,23 +1,38 @@
-{% extends "djangovoice/container.html" %}
 {% load user_name from djangovoice_tags %}
 {% load trans from i18n %}
 {% load url from future %}
 
-{% block sectionid %}feedback{% endblock %}
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-{% block script_base %}
-  <link rel="alternate" type="application/rss+xml" title="{% trans "Latest feedback" %}" href="{% url 'feeds_latest' %}" />
-{% endblock %}
+    <title>{% block title %}{% endblock %}{% block title_default %} | {% trans "DjangoVoice" %}{% endblock %}</title>
 
-{% block body %}
-  <header>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="{% url brand_view %}">{{ site.name }} {% trans "Feedback" %}</a>
-          <ul class="nav">
-            {% block navigation %}
-              <li><a href="{% url 'djangovoice_list' list='all' %}">{% trans "All" %}</a></li>
+	<meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" type="image/png" href="{{ STATIC_URL }}djangovoice/images/favicon.png" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}djangovoice/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}djangovoice/css/djangovoice.css" />
+    <link rel="alternate" type="application/rss+xml" title="{% trans "Latest feedback" %}" href="{% url 'feeds_latest' %}" />
+
+	<script src="{{ STATIC_URL }}djangovoice/js/libs/modernizr-2.5.3.min.js"></script>
+    {% block script %}{% endblock %}
+  </head>
+
+  <body>
+    <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
+    <header>
+      <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="brand" href="{% url brand_view %}">{{ site.name }} {% trans "Feedback" %}</a>
+            <ul class="nav">
+              {% block navigation %}
+                <li><a href="{% url 'djangovoice_list' list='all' %}">{% trans "All" %}</a></li>
               <li><a href="{% url 'djangovoice_list' list='open' %}">{% trans "Open" %}</a></li>
               <li><a href="{% url 'djangovoice_list' list='closed' %}">{% trans "Closed" %}</a></li>
               <li><a href="{% url 'djangovoice_list' list='mine' %}">{% trans "Mine" %}</a></li>
@@ -27,78 +42,84 @@
                 </a>
               </li>
             {% endblock %}
-          </ul>
-          <ul class="nav pull-right">
-            {% if user.is_authenticated %}
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  {% user_name user %}
-                  <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="/">{% trans "Back to mainpage" %}</a>
-                  </li>
-                  <li class="divider"></li>
-                  <li>
-                    <a href="{% url 'django.contrib.auth.views.logout' %}?next={% url 'djangovoice_home' %}">
-                      {% trans "Sign out" %}
-                    </a>
-                  </li>
-                </ul>
-              </li>
-            {% else %}
-              <li>
-                <a href="{% url 'django.contrib.auth.views.login' %}?next={% url 'djangovoice_home' %}">{% trans "Sign in" %}</a>
-              </li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <div role="main">
-    <div id="wrapper">
-      <div class="container" id="actions">
-        <ul>
-          <li><a href="{% url 'djangovoice_submit' %}">{% trans "Submit feedback" %}</a></li>
-          {% block actions %}{% endblock %}
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class="container">
-    <div id="content">
-      <div class="row">
-        <div class="span9">
-          <div id="feedback">
-            {% for message in messages %}
-              <div class="alert-message{% if message.tags %} {{ message.tags }}{% endif %}">
-                <a class="close" href="#">×</a>
-                <p>{{ message }}</p>
-              </div>
-            {% endfor %}
-
-            {% block content %}{% endblock %}
-          </div>
-        </div>
-
-        <div class="span3">
-          <div id="sidebar">
-            {% block sidebar %}{% endblock %}
+            </ul>
+            <ul class="nav pull-right">
+              {% if user.is_authenticated %}
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    {% user_name user %}
+                    <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a href="/">{% trans "Back to mainpage" %}</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                      <a href="{% url 'django.contrib.auth.views.logout' %}?next={% url 'djangovoice_home' %}">
+                        {% trans "Sign out" %}
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              {% else %}
+                <li>
+                  <a href="{% url 'django.contrib.auth.views.login' %}?next={% url 'djangovoice_home' %}">{% trans "Sign in" %}</a>
+                </li>
+              {% endif %}
+            </ul>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </header>
 
-  <footer>
+    <div role="main">
+      <div id="wrapper">
+        <div class="container" id="actions">
+          <ul>
+            <li><a href="{% url 'djangovoice_submit' %}">{% trans "Submit feedback" %}</a></li>
+            {% block actions %}{% endblock %}
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
-      <p>
-        <a href="https://github.com/gkmngrgn/django-voice">{% trans "Powered by django-voice" %}</a>
-      </p>
+      <div id="content">
+        <div class="row">
+          <div class="span9">
+            <div id="feedback">
+              {% for message in messages %}
+                <div class="alert-message{% if message.tags %} {{ message.tags }}{% endif %}">
+                  <a class="close" href="#">×</a>
+                  <p>{{ message }}</p>
+                </div>
+              {% endfor %}
+
+              {% block content %}{% endblock %}
+            </div>
+          </div>
+
+          <div class="span3">
+            <div id="sidebar">
+              {% block sidebar %}{% endblock %}
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </footer>
-{% endblock %}
+
+    <footer>
+      <div class="container">
+        <p>
+          <a href="https://github.com/gkmngrgn/django-voice">{% trans "Powered by django-voice" %}</a>
+        </p>
+      </div>
+    </footer>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}djangovoice/js/libs/jquery-1.7.2.min.js"><\/script>')</script>
+    <script src="{{ STATIC_URL }}djangovoice/bootstrap/js/bootstrap.min.js"></script>
+    {% block djangovoice_scripts %}{% endblock %}
+  </body>
+</html>
