added scripts and styles blocks.

--- a/djangovoice/templates/djangovoice/list.html
+++ b/djangovoice/templates/djangovoice/list.html
@@ -4,7 +4,8 @@
 {% load url from future %}
 {% load djangovoice_tags qhonuskan_votes gravatar comments %}
 
-{% block djangovoice_scripts %}
+{% block scripts %}
+  {{ block.super }}
   {% voting_script %}
 {% endblock %}
 
